added cloudformation template and updated buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,8 @@ phases:
     runtime-versions:
       python: 3.9
     commands:
-      - echo === INSTALL YOUR PACKAGES HERE!!! ===   
+      - echo === INSTALL YOUR PACKAGES HERE!!! === 
+      - pip3 install cfn-lint
     
   pre_build:
     commands:
@@ -13,18 +14,25 @@ phases:
       - python3 --version
       - echo === CHECKING FOR AMAZON VERSION ===
       - aws --version
+      - echo === CHECKING FOR CFN-LINT ===
+      - cfn-lint --version
     
   build:
     commands:
-      - echo === BUILD APP HERE ===
-      - python3 my_app.py
+      - echo === BUILD TEMPLATE HERE ===
+      - cfn-lint ec2-user-data-template-B.yml
+      - echo ***TEMPLATE VALIDATED***
+      - aws cloudformation validate-template --template-body file://ec2-user-data-template-B.yml
+      - echo === BUILD TEMPLATE HERE ===
+      - aws cloudformation package --template-file ec2-user-data-template-B.yml --s3-bucket my-deployed-artifact --output-template-file build-artifact-template.yaml
+      
     
   post_build:
     commands:
       - echo === WHAT TO DO WHEN BUILD IS COMPLETE ===
-      - echo Build completed at 'date'...
+      - echo Build completed at `date` # Prints out the current time in
     
 artifacts:
   files:
-    - '**/*'
+    - build-artifact-template.yaml # Creates the zip file (artifact) ---> in the deploy stage
    
